--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,6 +2,9 @@
 .header {
   position: sticky;
   top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
   z-index: $z-sticky;
   background-color: $white;
   border-bottom: 1px solid $gray-200;
@@ -157,6 +160,7 @@
 
 // Footer
 .footer {
+  width: 100%;
   background-color: $gray-900;
   color: $gray-300;
   padding: $spacing-12 0 $spacing-8;
